<resources>
    <string name="app_name">gzclp</string>
    <!-- menu -->
    <string name="item1">Workouts</string>
    <string name="item2">History</string>
    <string name="item3">Config</string>

    <!--test-->
    <string name="next">Your next workout:</string>
    <string name="start">Start!</string>

    <!--configuration-->
    <string name="squat_config">Max 3 rep. squat:</string>
    <string name="ohp_config">Max 3 rep. OHP:</string>
    <string name="deadlift_config">Max 3 rep. deadlift:</string>
    <string name="bench_config">Max 3 rep. bench press:</string>

    <string name="row_config">Max 10 rep. barbell row:</string>
    <string name="front_squat_config">Max 10 rep. front squat:</string>
    <string name="lunges_config">Max 10 rep. lunges:</string>
    <string name="sumo_config">Max 10 rep. sumo deadlift:</string>

    <string name="cg_bench_config">Max 15 rep. close grip bench press:</string>
    <string name="lateral_raises_config">Max 15 rep. lateral raises:</string>
    <string name="skullcrushers_config">Max 15 rep. skullcrushers:</string>
    <string name="good_morning_config">Max 15 rep. good morning:</string>

    <string name="elevation_config">Max 15 rep. close grip bench press:</string>
    <string name="hundreds_config">Max 15 rep. lateral raises:</string>
    <string name="pulldown_config">Max 15 rep. skullcrushers:</string>
    <string name="plank_config">Max 15 rep. good morning:</string>

    <string name="save">Save</string>

</resources>
