<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/squat_config">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789.,"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:nextFocusForward="@+id/squat_data1"
                android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/squat_config">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/squat_data1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusForward="@+id/squat_data"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/squat_config" />

        <EditText
            android:id="@+id/squat_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/ohp_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ohp_config" />

        <EditText
            android:id="@+id/ohp_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/deadlift_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadlift_config" />

        <EditText
            android:id="@+id/deadlift_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/bench_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bench_config" />

        <EditText
            android:id="@+id/bench_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/row_data"/>

        <!--t2-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row_config" />

        <EditText
            android:id="@+id/row_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/front_squat_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/front_squat_config" />

        <EditText
            android:id="@+id/front_squat_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/lunges_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunges_config" />

        <EditText
            android:id="@+id/lunges_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/sumo_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sumo_config" />

        <EditText
            android:id="@+id/sumo_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/cg_bench_data"/>

        <!-- t3 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cg_bench_config" />

        <EditText
            android:id="@+id/cg_bench_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/lateral_raises_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lateral_raises_config" />

        <EditText
            android:id="@+id/lateral_raises_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/skullcrushers_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skullcrushers_config" />

        <EditText
            android:id="@+id/skullcrushers_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"             android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/good_morning_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good_morning_config" />

        <EditText
            android:id="@+id/good_morning_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/elevation_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elevation_config" />

        <EditText
            android:id="@+id/elevation_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/hundreds_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hundreds_config" />

        <EditText
            android:id="@+id/hundreds_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/pulldown_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pulldown_config" />

        <EditText
            android:id="@+id/pulldown_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/plank_data"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plank_config" />

        <EditText
            android:id="@+id/plank_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/menu_navigation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_main" />

    </LinearLayout>
</ScrollView>